--- a/homework1/style.css
+++ b/homework1/style.css
@@ -135,8 +135,9 @@ input[name="firstName"] {
 }
 
 .btn {
-  padding: 10px 14px;
+  padding: 10px 22px;
   border-radius: 12px;
+  font-size: 16px;
   border: none;
   cursor: pointer;
   font-weight: 800;
