--- a/homework1/style.css
+++ b/homework1/style.css
@@ -137,8 +137,10 @@ textarea { resize: vertical; }
 .center-cell {
   text-align: center;
 }
-
+.td-right { text-align: right; padding-right: 8px; }
+.td-left  { text-align: left;  padding-left: 8px; }
 .mi-box {
+  
   width: 70px;
   display: inline-block;
 }
